--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "chatbot",
     "version": "1.0.0",
     "description": "project manager chatbot",
-    "main": "index.js",
+    "main": "bot.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "node bot.js"
     },
     "dependencies": {
         "axios": "^0.21.1",
