--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "chatbot",
     "version": "1.0.0",
+    "type": "module",
     "description": "project manager chatbot",
-    "main": "bot.js",
+    "main": "/src/bot.js",
     "scripts": {
-        "start": "node bot.js"
+        "start": "node src/bot.js"
     },
     "dependencies": {
         "axios": "^0.21.1",
