--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "chatbot",
+    "name": "discord_chatbots",
     "version": "1.0.0",
     "type": "module",
     "license": "MIT",
-    "description": "project manager chatbot",
+    "description": "github project manager chatbot",
     "main": "/src/bot.js",
     "scripts": {
         "test": "jest",
